fix overflow hidden bug when changing routes by forcing overflow auto in globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -197,6 +197,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow: auto !important;
 }
 @layer base {
   :root {
